Fix mark/component alignment in results view

--- a/site/public/css/server.css
+++ b/site/public/css/server.css
@@ -641,6 +641,11 @@ table tr.table-header {
     margin-left: 20px;
 }
 
+.grade-results {
+    display: flex;
+    flex-direction: row;
+}
+
 .box > h4 {
     margin-bottom: 10px;
     margin-left: 10px;
@@ -689,7 +694,7 @@ table tr.table-header {
     background-color: #999;
     border-radius: 10px;
     margin-left: 10px;
-    margin-right: 20px;
+    margin-right: 10px;
 }
 
 .no-badge {
@@ -746,6 +751,11 @@ table tr.table-header {
 
 .gradeable_comment td {
     padding: 0 4px;
+}
+
+.gradeable_comment td.mark-score {
+    text-align: right;
+    white-space: nowrap;
 }
 
 #search_wrapper{
